<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="16dp"
		android:gravity="center_horizontal"
		android:orientation="vertical" >
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="35sp"
			android:text="@string/preTitle" />
		
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="25sp"
			android:text="@string/pre" />

		<com.google.android.gms.ads.AdView
			android:id="@+id/adView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true"
			ads:adSize="BANNER"
			ads:adUnitId="@string/banner_ad_unit_id">
		</com.google.android.gms.ads.AdView>
		
    </LinearLayout>
</ScrollView>
